--- a/package.json
+++ b/package.json
@@ -87,13 +87,16 @@
     "typescript": "^4.0.2"
   },
   "dependencies": {
+    "@types/utf8": "^3.0.0",
     "antd": "^4.16.1",
     "electron-squirrel-startup": "^1.0.0",
     "lodash": "^4.17.21",
+    "node-stream-zip": "^1.13.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "reactn": "^2.2.7",
-    "styled-components": "^5.3.0"
+    "styled-components": "^5.3.0",
+    "utf8": "^3.0.0"
   },
   "prettier": {
     "printWidth": 100,
