--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "reactn": "^2.2.7",
+    "recharts": "^2.0.10",
     "styled-components": "^5.3.0",
     "utf8": "^3.0.0"
   },
