--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
     "idb-keyval": "^5.1.3",
     "lodash": "^4.17.21",
     "node-stream-zip": "^1.13.6",
+    "pretty-bytes": "^5.6.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
