--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,6 +13,10 @@
     "plugin:import/typescript"
   ],
   "parser": "@typescript-eslint/parser",
+  "rules": {
+    "@typescript-eslint/no-explicit-any": "off",
+    "import/no-named-as-default": "off"
+  },
   "settings": {
     "import/resolver": {
       "node": {
