--- a/package.json
+++ b/package.json
@@ -18,93 +18,47 @@
     "email": "mily20001@gmail.com"
   },
   "license": "MIT",
-  "config": {
-    "forge": {
-      "packagerConfig": {},
-      "makers": [
-        {
-          "name": "@electron-forge/maker-squirrel",
-          "config": {
-            "name": "fb_backup_parser"
-          }
-        },
-        {
-          "name": "@electron-forge/maker-zip",
-          "platforms": [
-            "darwin"
-          ]
-        },
-        {
-          "name": "@electron-forge/maker-deb",
-          "config": {}
-        },
-        {
-          "name": "@electron-forge/maker-rpm",
-          "config": {}
-        }
-      ],
-      "plugins": [
-        [
-          "@electron-forge/plugin-webpack",
-          {
-            "mainConfig": "./webpack.main.config.js",
-            "renderer": {
-              "config": "./webpack.renderer.config.js",
-              "entryPoints": [
-                {
-                  "html": "./src/index.html",
-                  "js": "./src/renderer.ts",
-                  "name": "main_window",
-                  "preload": {
-                    "js": "./src/preload.js"
-                  }
-                }
-              ]
-            }
-          }
-        ]
-      ]
-    }
-  },
   "devDependencies": {
-    "@electron-forge/cli": "^6.0.0-beta.57",
-    "@electron-forge/maker-deb": "^6.0.0-beta.57",
-    "@electron-forge/maker-rpm": "^6.0.0-beta.57",
-    "@electron-forge/maker-squirrel": "^6.0.0-beta.57",
-    "@electron-forge/maker-zip": "^6.0.0-beta.57",
-    "@electron-forge/plugin-webpack": "6.0.0-beta.57",
+    "@electron-forge/cli": "^6.4.2",
+    "@electron-forge/maker-deb": "^6.4.2",
+    "@electron-forge/maker-rpm": "^6.4.2",
+    "@electron-forge/maker-squirrel": "^6.4.2",
+    "@electron-forge/maker-zip": "^6.4.2",
+    "@electron-forge/plugin-webpack": "6.4.2",
+    "@electron-forge/plugin-auto-unpack-natives": "^6.4.2",
     "@marshallofsound/webpack-asset-relocator-loader": "^0.5.0",
-    "@types/react": "^17.0.14",
-    "@types/react-dom": "^17.0.9",
-    "@types/styled-components": "^5.1.9",
-    "@typescript-eslint/eslint-plugin": "^4.0.1",
-    "@typescript-eslint/parser": "^4.0.1",
-    "css-loader": "^5.0.0",
-    "electron": "13.1.7",
-    "eslint": "^7.6.0",
-    "eslint-plugin-import": "^2.20.0",
-    "fork-ts-checker-webpack-plugin": "^6.0.1",
+    "@types/react": "^18.2.21",
+    "@types/react-dom": "^18.2.7",
+    "@types/styled-components": "^5.1.27",
+    "@typescript-eslint/eslint-plugin": "^6.7.0",
+    "@typescript-eslint/parser": "^6.7.0",
+    "css-loader": "^6.8.1",
+    "electron": "^26.2.1",
+    "eslint": "^8.49.0",
+    "eslint-plugin-import": "^2.28.1",
+    "fork-ts-checker-webpack-plugin": "^8.0.0",
     "node-loader": "^2.0.0",
-    "prettier": "^2.3.2",
-    "style-loader": "^2.0.0",
-    "ts-loader": "^9.2.2",
-    "typescript": "^4.0.2"
+    "prettier": "^3.0.3",
+    "style-loader": "^3.3.3",
+    "ts-loader": "^9.4.4",
+    "typescript": "^5.2.2",
+    "@vercel/webpack-asset-relocator-loader": "^1.7.3",
+    "ts-node": "^10.9.1"
   },
   "dependencies": {
-    "@types/react-router-dom": "^5.1.8",
-    "@types/utf8": "^3.0.0",
-    "antd": "^4.16.1",
+    "@types/utf8": "^3.0.1",
+    "antd": "^5.9.0",
     "electron-squirrel-startup": "^1.0.0",
-    "idb-keyval": "^5.1.3",
+    "idb-keyval": "^6.2.1",
     "lodash": "^4.17.21",
-    "node-stream-zip": "^1.13.6",
-    "pretty-bytes": "^5.6.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-router-dom": "^5.2.0",
+    "node-stream-zip": "^1.15.0",
+    "pretty-bytes": "^6.1.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.16.0",
     "reactn": "^2.2.7",
-    "recharts": "^2.0.10",
-    "styled-components": "^5.3.0",
+    "recharts": "^2.8.0",
+    "styled-components": "^6.0.8",
     "utf8": "^3.0.0"
   },
   "prettier": {
